--- a/CS249EventsApp.css
+++ b/CS249EventsApp.css
@@ -22,6 +22,7 @@
 
 ul {
     list-style-type: none;
+    padding-left: 0px !important;
 }
 
 .green {
@@ -32,6 +33,7 @@ ul {
 	color: red;
 }
 
-.shift-right {
+.padding {
 	padding-left: 40px !important;
+	padding-right: 40px !important;
 }
