accordian view of events, added date picker to event submission, also coordinators can only remove events they've created

--- a/CS249EventsApp.css
+++ b/CS249EventsApp.css
@@ -53,3 +53,7 @@ ul {
 	border-color: #bbb !important;
 }
 
+#startTime, #endTime {
+	padding-left: 15px !important;
+	padding-right: 15px !important;
+}
