worked on attend event page, also session.set('currentevent') stuff

--- a/CS249EventsApp.css
+++ b/CS249EventsApp.css
@@ -38,6 +38,11 @@ ul {
 	padding-right: 40px !important;
 }
 
+.margin {
+	margin-left: 40px !important;
+	margin-right: 40px !important;
+}
+
 
 .blue {
     color: blue;
