worked on privileges/access depending on whether user created event, still need to figure out how to manage the shared-with users though

--- a/CS249EventsApp.css
+++ b/CS249EventsApp.css
@@ -20,6 +20,10 @@
     color: #E0E0E0;
 }
 
+.activePage {
+	background-color: #dfdfdf !important;
+}
+
 ul {
     list-style-type: none;
     padding-left: 0px !important;
