--- a/CS249EventsApp.css
+++ b/CS249EventsApp.css
@@ -1,4 +1,8 @@
-/* CSS declarations go here */
+/* Filename: CS249EventsApp.css
+Author: Ella Chao, Priscilla Lee, Jamie Yip
+Date: May 3, 2015
+Goal: CSS for Events Organizer App
+*/
 button.close {
     color: white !important;
     font-weight: normal !important;
